Fix too many dependent brushes in a list of RequiredBrushFilesListTag

We should reset the settings object before every dump of the options
from the widgets, otherwise some of the options accumulate

BUG:388893